# transcribeIT

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  NOTICE  README.md  README.rst  file_list.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: Makefile  conf.py  index.rst  make.bat
info/: Installing FFmpeg on Windows {Step-by-Step}.url
nota_bene/: __init__.py  app.py  prompts.py  utils.py
nota_bene/app_pages/: audio_playback.py  audio_preprocessing.py  audio_recording.py  audio_upload.py  configurations.py  create_minute_notes.py  create_minutes.py  intro.py  minutes_prompt.py  model_instructions.py  transcribe.py  transcribe_edit.py
nota_bene/user_prompts/: heisessie.txt  minute_notes.txt
tests/: test_nota_bene.py
